src/test/ui/immut-function-arguments.ast.stderr
error[E0594]: cannot assign to immutable `Box` content `*y`
  --> $DIR/immut-function-arguments.rs:5:5
   |
LL | fn f(y: Box<isize>) {
   |      - help: make this binding mutable: `mut y`
LL |     *y = 5; //[ast]~ ERROR cannot assign
   |     ^^^^^^ cannot borrow as mutable

error[E0594]: cannot assign to immutable `Box` content `*q`
  --> $DIR/immut-function-arguments.rs:10:35
   |
LL |     let _frob = |q: Box<isize>| { *q = 2; }; //[ast]~ ERROR cannot assign
   |                  -                ^^^^^^ cannot borrow as mutable
   |                  |
   |                  help: make this binding mutable: `mut q`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0594`.
